# PLZ_to_Bundesland_Converter

./: LICENSE  README.md  bundesland.py  plz_data.py  requirements.txt  setup.cfg
src/plz_to_bundesland/: __init__.py  cli.py  converter.py
src/plz_to_bundesland.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
