[metadata]
name = plz_to_bundesland
version = 0.1.1
author = Alexander Johae
author_email = alex.johae@web.de
description = A package to convert German postal codes (PLZ) to their corresponding Bundesland
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex8098/plz_to_bundesland_converter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.0.0
    openpyxl>=3.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    plz_to_bundesland = plz_to_bundesland.cli:main
